# KType

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/include/: inputframe.h  main.h  typetextctrl.h
src/src/: main.cpp  typetextctrl.cpp
